--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
     font-family: sans-serif;
     padding: 20px;
+    
   }
   
   h1 {
@@ -29,6 +30,7 @@ body {
     margin-right: auto;
     padding: 20px;
     max-width: 500px;
+    border-radius: 10px;
   }
   
   img {
